# activity-on-demand

./: README.md  pyproject.toml
src/activity_on_demand/: __init__.py  __main__.py  bundler.py  cli.py  generator.py  validator.py
src/activity_on_demand/templates/: __init__.py
src/activity_on_demand/templates/HelloGenerated.activity/: main.py
src/activity_on_demand/templates/HelloGenerated.activity/activity/: activity.info
src/activity_on_demand/templates/HelloGenerated.activity/assets/: README.txt
src/activity_on_demand/templates/HelloGenerated.activity/icons/: README.txt
