[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-on-demand"
version = "0.1.0"
description = "Generate and validate Sugar activity bundles from the command line."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI" }]
dependencies = []

[project.scripts]
activity-on-demand = "activity_on_demand.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
activity_on_demand = ["templates/**/*"]
